--- a/.gitconfig
+++ b/.gitconfig
@@ -3,4 +3,6 @@
 	email = peixiangxu@gmail.com
 [alias]
     cm = commit
+    ca = commit -a
+    st = status
     lg = log --color --graph --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr) %C(bold blue)<%an>%Creset' --abbrev-commit
