set push default to simple in git

--- a/.gitconfig
+++ b/.gitconfig
@@ -6,3 +6,5 @@
     ca = commit -a
     st = status
     lg = log --color --graph --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr) %C(bold blue)<%an>%Creset' --abbrev-commit
+[push]
+	default = simple
