--- a/.gitconfig
+++ b/.gitconfig
@@ -4,7 +4,7 @@
 [alias]
     cm = commit
     ca = commit -a
-    st = status
+    st = status -uno
     lg = log --color --graph --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr) %C(bold blue)<%an>%Creset' --abbrev-commit
 [push]
 	default = simple
