--- a/.gitconfig
+++ b/.gitconfig
@@ -2,8 +2,8 @@
     name = Peixiang xu
     email = peixiangxu@gmail.com
 [alias]
-    cm = commit
     ca = commit -a
+    co = checkout
     st = status -uno
     rmc = rm --cached
     lg = log --color --graph --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr) %C(bold blue)<%an>%Creset' --abbrev-commit
