test for rebase: add a file in dev

--- a/.gitconfig
+++ b/.gitconfig
@@ -2,6 +2,7 @@
     name = Peixiang xu
     email = peixiangxu@gmail.com
 [alias]
+    cm = commit
     ca = commit -a
     co = checkout
     st = status -uno
