decorate status bar

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -9,3 +9,17 @@ unbind C-b
 
 # set send-prefix 
 bind-key C-a send-prefix
+
+# status bar
+set -g status-left "#[fg=white,bg=blue] >> #I << #[default]|"
+set -g status-right "#[fg=yellow,bright][ #[fg=cyan]#W #[fg=yellow]]#[default] #[fg=yellow,bright]- %Y.%m.%d #[fg=green]%H:%M #[default]"
+set -g status-right-attr bright
+set -g status-bg blue
+set -g status-fg white
+setw -g window-status-current-attr bright
+setw -g window-status-current-bg green
+setw -g window-status-current-fg white
+
+
+# automatic rename
+setw -g automatic-rename on
