--- a/.tmux.conf
+++ b/.tmux.conf
@@ -11,7 +11,7 @@ unbind C-b
 bind-key C-a send-prefix
 
 # status bar
-set -g status-left "#[fg=white,bg=blue] >> #I << #[default]|"
+set -g status-left "#[fg=blue,bg=white] -> #I   #[default]"
 set -g status-right "#[fg=yellow,bright][ #[fg=cyan]#W #[fg=yellow]]#[default] #[fg=yellow,bright]- %Y.%m.%d #[fg=green]%H:%M #[default]"
 set -g status-right-attr bright
 set -g status-bg blue
@@ -20,6 +20,8 @@ setw -g window-status-current-attr bright
 setw -g window-status-current-bg green
 setw -g window-status-current-fg white
 
-
 # automatic rename
 setw -g automatic-rename on
+
+# reload
+bind r source-file ~/.tmux.conf \; display "Tmux Reloaded!"
