--- a/.tmux.conf
+++ b/.tmux.conf
@@ -11,14 +11,16 @@ unbind C-b
 bind-key C-a send-prefix
 
 # status bar
-set -g status-left "#[fg=blue,bg=white] -> #I   #[default]"
-set -g status-right "#[fg=yellow,bright][ #[fg=cyan]#W #[fg=yellow]]#[default] #[fg=yellow,bright]- %Y.%m.%d #[fg=green]%H:%M #[default]"
+set -g status-left "#[fg=blue,bg=white]  ->#I   #[default]"
+set -g status-left-attr bright
+set -g status-right "#[fg=yellow][ #[fg=white]#W #[fg=yellow]]#[default] #[fg=yellow,bright]- %Y.%m.%d #[fg=red]%H:%M #[default]"
 set -g status-right-attr bright
 set -g status-bg blue
 set -g status-fg white
+set -g status-attr bright
 setw -g window-status-current-attr bright
 setw -g window-status-current-bg green
-setw -g window-status-current-fg white
+setw -g window-status-current-fg yellow
 
 # automatic rename
 setw -g automatic-rename on
