revert current text to white color

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -20,7 +20,7 @@ set -g status-fg white
 set -g status-attr bright
 setw -g window-status-current-attr bright
 setw -g window-status-current-bg green
-setw -g window-status-current-fg yellow
+setw -g window-status-current-fg white
 
 # automatic rename
 setw -g automatic-rename on
