--- a/.tmux.conf
+++ b/.tmux.conf
@@ -11,8 +11,7 @@ unbind C-b
 bind-key C-a send-prefix
 
 # status bar
-set -g status-left "#[fg=blue,bg=white]  ->#I   #[default]"
-set -g status-left-attr bright
+set -g status-left "#[fg=black,bright]  ->#I   #[default]"
 set -g status-right "#[fg=yellow][ #[fg=white]#W #[fg=yellow]]#[default] #[fg=yellow,bright]- %Y.%m.%d #[fg=red]%H:%M #[default]"
 set -g status-right-attr bright
 set -g status-bg blue
