supoort mouse in tmux

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -26,3 +26,6 @@ setw -g automatic-rename on
 
 # reload
 bind r source-file ~/.tmux.conf \; display "Tmux Reloaded!"
+
+# mouse mode on
+setw -g mode-mouse on 
