new color for tmux status bar

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -11,15 +11,15 @@ unbind C-b
 bind-key C-a send-prefix
 
 # status bar
-set -g status-left "#[fg=blue,bg=yellow]#   ->#I   #[default]"
-set -g status-right "#[fg=yellow][ #[fg=white]#W #[fg=yellow]]#[default] #[fg=yellow,bright]- %Y.%m.%d #[fg=red]%H:%M #[default]"
+set -g status-left "#[fg=colour25,bg=colour255]#   ->#I   #[default]"
+set -g status-right "#[fg=colour25]    %Y/%m/%d   #[default]"
 set -g status-right-attr bright
-set -g status-bg blue
+set -g status-bg colour25
+set -g status-right-bg colour255
 set -g status-fg white
 set -g status-attr bright
 setw -g window-status-current-attr bright
-setw -g window-status-current-bg green
-setw -g window-status-current-fg white
+setw -g window-status-current-bg red
 
 # automatic rename
 setw -g automatic-rename on
