--- a/.tmux.conf
+++ b/.tmux.conf
@@ -11,7 +11,7 @@ unbind C-b
 bind-key C-a send-prefix
 
 # status bar
-set -g status-left "#[fg=colour25,bg=colour255]#   ->#I   #[default]"
+set -g status-left "#[fg=colour25,bg=colour255]  ->#I   #[default]"
 set -g status-right "#[fg=colour25]    %Y/%m/%d   #[default]"
 set -g status-right-attr bright
 set -g status-bg colour25
