modify tmux conf file

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -11,13 +11,12 @@ unbind C-b
 bind-key C-a send-prefix
 
 # status bar
-set -g status-left "#[fg=colour25,bg=colour255]  ->#I   #[default]"
+set -g status-left "#[fg=colour25]  ->#I   #[default]"
 set -g status-right "#[fg=colour25]    %Y/%m/%d   #[default]"
-set -g status-right-attr bright
+set -g status-left-bg colour255
 set -g status-bg colour25
 set -g status-right-bg colour255
 set -g status-fg white
-set -g status-attr bright
 setw -g window-status-current-attr bright
 setw -g window-status-current-bg red
 
